--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
     "name": "hcmuaf-schedule-exporter",
     "version": "1.0.0",
     "description": "Export HCMUAF schedule to iCal format",
-    "main": "server.js",
+    "main": "api/server.js",
     "scripts": {
-        "start": "node server",
-        "dev": "nodemon server.js",
-        "build": "babel server.js --out-dir dist"
+        "start": "node api/server.js",
+        "dev": "nodemon api/server.js",
+        "build": "babel api/server.js --out-dir dist"
     },
     "dependencies": {
         "axios": "^1.8.1",
         "body-parser": "^1.20.2",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.18.1",
         "ical-generator": "^3.6.0",
+        "strftime": "^0.10.3",
         "yarn": "^1.22.22"
     },
     "devDependencies": {
