--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
         "build": "babel api/server.js --out-dir dist"
     },
     "dependencies": {
-        "axios": "^1.8.1",
-        "body-parser": "^1.20.2",
+        "axios": "^1.12.2",
+        "body-parser": "^2.2.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "express-session": "^1.18.1",
-        "ical-generator": "^3.6.0",
+        "dotenv": "^17.2.2",
+        "express": "^5.1.0",
+        "express-session": "^1.18.2",
+        "ical-generator": "^9.0.0",
         "strftime": "^0.10.3",
+        "vercel": "^41.0.2",
         "yarn": "^1.22.22"
     },
     "devDependencies": {
-        "@babel/cli": "^7.26.4",
-        "@babel/core": "^7.26.9",
-        "@babel/preset-env": "^7.26.9",
-        "nodemon": "^3.1.9"
+        "@babel/cli": "^7.28.3",
+        "@babel/core": "^7.28.4",
+        "@babel/preset-env": "^7.28.3",
+        "nodemon": "^3.1.10"
     },
     "engines": {
         "node": ">=14.0.0"
